implement HEAD method (is used by the frontend). Without this the server returns 405 when called with HEAD to `v2/pkgs/tools/installed` This breaks the install of the tools
