# gen/http/tools/server/encode_decode.go
@@ -29,6 +29,15 @@ func EncodeAvailableResponse(encoder func(context.Context, http.ResponseWriter) 
 	}
 }
 
+// EncodeInstalledheadResponse returns an encoder for responses returned by the
+// tools installedhead endpoint.
+func EncodeInstalledheadResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
+	return func(ctx context.Context, w http.ResponseWriter, v any) error {
+		w.WriteHeader(http.StatusOK)
+		return nil
+	}
+}
+
 // EncodeInstalledResponse returns an encoder for responses returned by the
 // tools installed endpoint.
 func EncodeInstalledResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
